[tool.poetry]
name = "linkedlist"
version = "0.1.0"
description = "How implement and visualize LinkedList"
authors = ["atabekdemurtaza <mychannel21war@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
loguru = "^0.7.2"
graphviz = "^0.20.3"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
coverage = "^7.6.1"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
